Some changes in the code

--- a/test.html
+++ b/test.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pokemon API</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pokemon API</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
 <body>
+
+    <img src="images/ash-pokemon.png" alt="Ash with Pokemon" id="ash-style-png" />
 
     <style>
         body {
@@ -22,6 +22,7 @@
 
     <input type="text" id="searchTxt" placeholder="Search for a Pokemon..">
     <input type="button" id="searchBtn" value="Search" onclick="showPokemons()">
+
     <div id="resultDiv"></div>
 
     <script>
