--- a/test.html
+++ b/test.html
@@ -23,6 +23,11 @@
     <input type="text" id="searchTxt" placeholder="Search for a Pokemon..">
     <input type="button" id="searchBtn" value="Search" onclick="showPokemons()">
 
+    <input type="text-box" id="login-txt" placeholder="Enter your username..">
+    <br>
+    <input type="password" id="password-txt" placeholder="Enter your password..">
+    <input type="button" id="login-btn" value="Login" onclick="loginUser()">
+
     <div id="resultDiv"></div>
 
     <script>
