--- a/test.html
+++ b/test.html
@@ -6,37 +6,98 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon API</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Example font for a more playful look -->
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <h1>Pokémon Search App</h1>
-        <h2>Welcome to Pokémon World!</h2>
-    </header>
 
     <img src="images/ash-pokemon.png" alt="Ash with Pokemon" id="ash-style-png" />
 
-    <main>
-        <form id="search-form" onsubmit="event.preventDefault(); showPokemons();">
-            <input type="text" id="searchTxt" placeholder="Search for a Pokémon..." class="searchTxtStyle">
-            <button type="submit" id="searchBtn" class="searchBtnStyle">🔍</button>
-        </form>
+    <h1>Pokemon API</h1>
+    <h2>Welcome to Pokemon World!</h2>
 
-        <form id="login-form">
-            <label for="login-txt">Username:</label>
-            <input type="text" id="login-txt" placeholder="Username" required>
-            <label for="password-txt">Password:</label>
-            <input type="password" id="password-txt" placeholder="Password" required>
-            <button type="button" id="login-btn" onclick="loginUser()">Login</button>
-            <button type="button" id="register-btn">Register</button>
-        </form>
+    <form id="search-form" onsubmit="event.preventDefault(); showPokemons();">
+        <input type="text" id="searchTxt" placeholder="Search for a Pokemon.." class="searchTxtStyle">
+        <button type="submit" id="searchBtn" class="searchBtnStyle">Search</button>
+    </form>
 
-        <div id="resultDiv"></div>
-    </main>
+    <form id="login-form">
+        <label for="login-txt">Username:</label>
+        <input type="text" id="login-txt" placeholder="Username" required>
+        <label for="password-txt">Password:</label>
+        <input type="password" id="password-txt" placeholder="Password" required>
+        <button type="button" id="login-btn" onclick="loginUser()">Login</button>
+        <button type="button" id="register-btn">Register</button>
+    </form>
 
-    <script src="/script/scripts.js"></script>
+    <div id="resultDiv"></div>
+
+    <script src="scripts.js"></script>
+</body>
+
+</html>
+
+<script>
+    const searchInput = document.getElementById("searchTxt");
+    const resultDiv = document.getElementById("resultDiv");
+    const url = "https://pokeapi.co/api/v2/pokemon/";
+
+    async function showPokemons() {
+        const searchValue = searchInput.value.toLowerCase().trim();
+        if (!searchValue) {
+            resultDiv.innerHTML = "<p>Please enter a Pokemon name or ID.</p>";
+            return;
+        }
+
+        try {
+            const response = await fetch(url + searchValue);
+            if (!response.ok) {
+                throw new Error("Pokemon not found");
+            }
+            const pokemon = await response.json();
+            resultDiv.innerHTML = `
+            <div class="pokemon-card">
+                <h3>${pokemon.name.toUpperCase()}</h3>
+                <img src="${pokemon.sprites.front_default}" alt="${pokemon.name}">
+                <p>Height: ${pokemon.height}</p>
+                <p>Weight: ${pokemon.weight}</p>
+                <p>Type: ${pokemon.types.map(type => type.type.name).join(", ")}</p>
+                <p>Strength: ${pokemon.stats.find(stat => stat.stat.name === "attack")?.base_stat || "N/A"}</p>
+                <p>Defense: ${pokemon.stats.find(stat => stat.stat.name === "defense")?.base_stat || "N/A"}</p>
+                <p>Speed: ${pokemon.stats.find(stat => stat.stat.name === "speed")?.base_stat || "N/A"}</p>
+            </div>
+        `;
+        } catch (error) {
+            alert(error.message);
+            resultDiv.innerHTML = "";
+        }
+
+    }
+
+    async function loginUser() {
+        const username = document.getElementById("login-txt").value;
+        const password = document.getElementById("password-txt").value;
+
+        const response = await fetch("http://localhost:3000/login", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({ username, password })
+        });
+
+        if (response.ok) {
+            const message = await response.text();
+            alert(message); // vis svaret fra serveren
+        } else {
+            const error = await response.text();
+            alert(error); // vis feilmelding
+        }
+    }
+
+
+
+
+</script>
 </body>
 
 </html>
